--- a/flutter_app2/pubspec.yaml
+++ b/flutter_app2/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path_provider: ^0.5.0
   #### 日期格式化
   intl: ^0.16.0
+  provider: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
